Test site content update
Page for each Data List list-editor.

--- a/src/Umbraco.Cms.16.x/appsettings.Development.json
+++ b/src/Umbraco.Cms.16.x/appsettings.Development.json
@@ -34,7 +34,20 @@
       "RuntimeMinification": {
         "UseInMemoryCache": true,
         "CacheBuster": "Timestamp"
+      },
+      "Unattended": {
+        "UpgradeUnattended": true,
+        "InstallUnattended": true,
+        "UnattendedUserName": "Test",
+        "UnattendedUserEmail": "test@test.com",
+        "UnattendedUserPassword": "test123456"
       }
+    }
+  },
+  "uSync": {
+    "Settings": {
+      "RootFolder": "uSync/v16/",
+      "ImportAtStartup": "All"
     }
   }
 }
