--- a/src/Umbraco.Cms.16.x/uSync/v16/Content/data-sources-umbraco.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/Content/data-sources-umbraco.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Content Key="af0a5222-f5e7-4c4a-9927-f571da1f9d39" Alias="Data Sources: Umbraco" Level="2">
+<Content Key="af0a5222-f5e7-4c4a-9927-f571da1f9d39" Alias="Data Sources: Umbraco" Level="3">
   <Info>
-    <Parent Key="7a17e1d4-36c6-48b0-971d-d1f09f7ae610">Data List</Parent>
-    <Path>/DataList/DataSourcesUmbraco</Path>
+    <Parent Key="418d5c66-2089-47de-ba39-87902aecb0bb">Data Sources</Parent>
+    <Path>/DataList/DataSources/DataSourcesUmbraco</Path>
     <Trashed>false</Trashed>
-    <ContentType>contentmentDataListUmbraco</ContentType>
+    <ContentType>contentmentDataListDataSourcesUmbraco</ContentType>
     <CreateDate>2025-08-22T19:37:15</CreateDate>
     <NodeName Default="Data Sources: Umbraco" />
     <SortOrder>2</SortOrder>
