--- a/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentdatalist.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentdatalist.config
@@ -2,7 +2,7 @@
 <ContentType Key="a36df9f1-1586-4594-a85a-c99259234aeb" Alias="contentmentDataList" Level="2">
   <Info>
     <Name>Data List</Name>
-    <Icon>icon-bulleted-list color-indigo</Icon>
+    <Icon>icon-bulleted-list color-light-blue</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description>An editor that combines a custom data source with a custom list editor.</Description>
     <AllowAtRoot>True</AllowAtRoot>
@@ -22,10 +22,8 @@
     </AllowedTemplates>
   </Info>
   <Structure>
-    <ContentType Key="691af129-fbd8-4c91-9cf2-b83be83388a7" SortOrder="0">contentmentDataListDotNet</ContentType>
-    <ContentType Key="59e89587-4b08-49b0-a7c6-ac0d49aaf5c7" SortOrder="1">contentmentDataListData</ContentType>
-    <ContentType Key="7d48e286-eeec-4df6-a1dc-eb2387fb671f" SortOrder="2">contentmentDataListUmbraco</ContentType>
-    <ContentType Key="deec27a1-52e0-4687-ba81-521cf9f3fdf3" SortOrder="3">contentmentDataListWeb</ContentType>
+    <ContentType Key="fb0af6c1-bf68-46e7-ab43-2ee1c8149629" SortOrder="0">contentmentDataListDataSourcesPage</ContentType>
+    <ContentType Key="d97d5da6-b96e-480c-99f1-b3c90dd04828" SortOrder="1">contentmentDataListListEditorsPage</ContentType>
   </Structure>
   <GenericProperties>
     <GenericProperty>
