--- a/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentdatalistdatasourcesdata.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentdatalistdatasourcesdata.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="691af129-fbd8-4c91-9cf2-b83be83388a7" Alias="contentmentDataListDotNet" Level="2">
+<ContentType Key="59e89587-4b08-49b0-a7c6-ac0d49aaf5c7" Alias="contentmentDataListDataSourcesData" Level="2">
   <Info>
-    <Name>Data List: .NET</Name>
+    <Name>Data List: Data Sources: Data</Name>
     <Icon>icon-bulleted-list color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description>An editor that combines a custom data source with a custom list editor.</Description>
@@ -24,80 +24,112 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
-      <Key>7af4fb19-6119-480a-99a8-a0fbec34cbd2</Key>
-      <Name>Data List Countries</Name>
-      <Alias>dataListCountries</Alias>
-      <Definition>817e34da-3e9c-4c42-a3e3-de29c0a749c9</Definition>
-      <Type>Umbraco.Community.Contentment.DataList</Type>
-      <Mandatory>false</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[]]></Description>
-      <SortOrder>0</SortOrder>
-      <Tab Alias=".NET">.NET</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-    <GenericProperty>
-      <Key>02bf6497-0783-45a8-9ad5-3d480fd71d6f</Key>
-      <Name>Data List Currencies</Name>
-      <Alias>dataListCurrencies</Alias>
-      <Definition>6410e6b7-0af4-4830-a5c8-103b8a2e3400</Definition>
-      <Type>Umbraco.Community.Contentment.DataList</Type>
-      <Mandatory>false</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[]]></Description>
-      <SortOrder>1</SortOrder>
-      <Tab Alias=".NET">.NET</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-    <GenericProperty>
-      <Key>4b239d00-79f6-4c6d-ba3c-064319427d25</Key>
-      <Name>Data List Enumeration</Name>
-      <Alias>dataListEnumeration</Alias>
-      <Definition>869e60dc-a1ef-41c1-abad-b241eb796965</Definition>
-      <Type>Umbraco.Community.Contentment.DataList</Type>
-      <Mandatory>false</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[]]></Description>
-      <SortOrder>2</SortOrder>
-      <Tab Alias=".NET">.NET</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-    <GenericProperty>
-      <Key>ffa8f389-6386-40e9-a93e-965d6c251842</Key>
-      <Name>Data List Languages</Name>
-      <Alias>dataListLanguages</Alias>
-      <Definition>44e8c5f9-aeb9-4766-8209-f56c28587880</Definition>
-      <Type>Umbraco.Community.Contentment.DataList</Type>
-      <Mandatory>false</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[]]></Description>
-      <SortOrder>3</SortOrder>
-      <Tab Alias=".NET">.NET</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-    <GenericProperty>
-      <Key>1251dcef-529b-4961-8a1e-d8627ed5816c</Key>
-      <Name>Data List Time Zones</Name>
-      <Alias>dataListTimeZones</Alias>
-      <Definition>af1d3c44-85b9-4c6b-a73c-abea29f69ee6</Definition>
+      <Key>3217f67f-7331-4117-8bad-2dd604534ad8</Key>
+      <Name>Data List CSV</Name>
+      <Alias>dataListCsv</Alias>
+      <Definition>e1a466ca-74ef-4f35-87aa-748fc290c895</Definition>
       <Type>Umbraco.Community.Contentment.DataList</Type>
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
       <SortOrder>4</SortOrder>
-      <Tab Alias=".NET">.NET</Tab>
+      <Tab Alias="data">Data</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>a82a6a1a-c260-40f5-9c09-df47a09f1cfa</Key>
+      <Name>Data List File System</Name>
+      <Alias>dataListFileSystem</Alias>
+      <Definition>dec9a23a-f49b-4f51-9231-23ad05a95beb</Definition>
+      <Type>Umbraco.Community.Contentment.DataList</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>0</SortOrder>
+      <Tab Alias="data">Data</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>2c52778e-9014-493b-bbb9-67368c5402df</Key>
+      <Name>Data List JSON</Name>
+      <Alias>dataListJson</Alias>
+      <Definition>8ac69d41-32e9-4ad1-b49b-215216ea2279</Definition>
+      <Type>Umbraco.Community.Contentment.DataList</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>1</SortOrder>
+      <Tab Alias="data">Data</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>674f50d7-98f8-4230-a835-a64ecdf167be</Key>
+      <Name>Data List Number Range</Name>
+      <Alias>dataListNumberRange</Alias>
+      <Definition>5f6a081b-0145-400d-b8d9-4b0d9266a4b6</Definition>
+      <Type>Umbraco.Community.Contentment.DataList</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>2</SortOrder>
+      <Tab Alias="data">Data</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>9897970d-e784-41b0-b9fd-44d02f8cae90</Key>
+      <Name>Data List SQL</Name>
+      <Alias>dataListSql</Alias>
+      <Definition>a57a0bc0-732f-4d00-8fa0-6635b4de28f4</Definition>
+      <Type>Umbraco.Community.Contentment.DataList</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>3</SortOrder>
+      <Tab Alias="data">Data</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>cda69622-bdb6-4364-a6a0-e1030dda4c71</Key>
+      <Name>Data List User-defined</Name>
+      <Alias>dataListUserDefined</Alias>
+      <Definition>a4d45ecc-eed6-4b53-9f83-8282e9bfcfc1</Definition>
+      <Type>Umbraco.Community.Contentment.DataList</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>5</SortOrder>
+      <Tab Alias="data">Data</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>c9d0d0b0-ec2f-484f-85c1-17e5bb89bd8c</Key>
+      <Name>Data List XML</Name>
+      <Alias>dataListXml</Alias>
+      <Definition>5448fd87-723a-4092-9894-2c3e9860bb0c</Definition>
+      <Type>Umbraco.Community.Contentment.DataList</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>6</SortOrder>
+      <Tab Alias="data">Data</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
       <ValidationRegExpMessage></ValidationRegExpMessage>
@@ -106,11 +138,11 @@
   </GenericProperties>
   <Tabs>
     <Tab>
-      <Key>5a549605-7579-42c5-9203-63d8502895be</Key>
-      <Caption>.NET</Caption>
-      <Alias>.NET</Alias>
+      <Key>d554d56f-f594-4b99-987d-454f5cf927e1</Key>
+      <Caption>Data</Caption>
+      <Alias>data</Alias>
       <Type>Tab</Type>
-      <SortOrder>0</SortOrder>
+      <SortOrder>1</SortOrder>
     </Tab>
   </Tabs>
 </ContentType>
