--- a/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentdatalistdatasourcesweb.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentdatalistdatasourcesweb.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="deec27a1-52e0-4687-ba81-521cf9f3fdf3" Alias="contentmentDataListWeb" Level="2">
+<ContentType Key="deec27a1-52e0-4687-ba81-521cf9f3fdf3" Alias="contentmentDataListDataSourcesWeb" Level="2">
   <Info>
-    <Name>Data List: Web</Name>
+    <Name>Data List: Data Sources: Web</Name>
     <Icon>icon-bulleted-list color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description>An editor that combines a custom data source with a custom list editor.</Description>
