--- a/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListListEditorCustomComponentList.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListListEditorCustomComponentList.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<DataType Key="d5c03689-ccdd-4581-b086-b48fb422c483" Alias="Data List: List Editor: Buttons" Level="3">
+<DataType Key="a3ea6182-8a38-4281-abda-8b891f12b3f3" Alias="Data List: List Editor: Custom Component List" Level="3">
   <Info>
-    <Name>Data List: List Editor: Buttons</Name>
+    <Name>Data List: List Editor: Custom Component List</Name>
     <EditorAlias>Umbraco.Community.Contentment.DataList</EditorAlias>
     <EditorUIAlias>Umb.Contentment.PropertyEditorUi.DataList</EditorUIAlias>
     <Folder>Data+List/List+Editors</Folder>
@@ -36,14 +36,14 @@
   ],
   "listEditor": [
     {
-      "key": "Umbraco.Community.Contentment.DataEditors.ButtonsDataListEditor, Umbraco.Community.Contentment",
+      "key": "Umbraco.Community.Contentment.DataEditors.CustomComponentListDataListEditor, Umbraco.Community.Contentment",
       "value": {
-        "defaultIcon": "icon-document",
-        "labelStyle": "both",
-        "look": "default",
-        "size": "m",
+        "orientation": "horizontal",
         "allowClear": true,
-        "enableMultiple": true
+        "enableMultiple": true,
+        "component": [
+          "Umb.Contentment.DataListItemUi.InfoBox"
+        ]
       }
     }
   ]
