--- a/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListListEditorItemPicker.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListListEditorItemPicker.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<DataType Key="d5c03689-ccdd-4581-b086-b48fb422c483" Alias="Data List: List Editor: Buttons" Level="3">
+<DataType Key="57370d6f-13a7-4b40-a6e1-33a94447e9be" Alias="Data List: List Editor: Item Picker" Level="3">
   <Info>
-    <Name>Data List: List Editor: Buttons</Name>
+    <Name>Data List: List Editor: Item Picker</Name>
     <EditorAlias>Umbraco.Community.Contentment.DataList</EditorAlias>
     <EditorUIAlias>Umb.Contentment.PropertyEditorUi.DataList</EditorUIAlias>
     <Folder>Data+List/List+Editors</Folder>
@@ -36,14 +36,17 @@
   ],
   "listEditor": [
     {
-      "key": "Umbraco.Community.Contentment.DataEditors.ButtonsDataListEditor, Umbraco.Community.Contentment",
+      "key": "Umbraco.Community.Contentment.DataEditors.ItemPickerDataListEditor, Umbraco.Community.Contentment",
       "value": {
+        "listType": "list",
         "defaultIcon": "icon-document",
-        "labelStyle": "both",
-        "look": "default",
-        "size": "m",
+        "enableFilter": true,
+        "maxItems": 0,
         "allowClear": true,
-        "enableMultiple": true
+        "allowDuplicates": true,
+        "enableMultiple": true,
+        "disableSorting": false,
+        "confirmRemoval": true
       }
     }
   ]
