--- a/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListListEditorTags.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListListEditorTags.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<DataType Key="d5c03689-ccdd-4581-b086-b48fb422c483" Alias="Data List: List Editor: Buttons" Level="3">
+<DataType Key="4f52674c-cfa6-453a-a8a5-5defbaffde14" Alias="Data List: List Editor: Tags" Level="3">
   <Info>
-    <Name>Data List: List Editor: Buttons</Name>
+    <Name>Data List: List Editor: Tags</Name>
     <EditorAlias>Umbraco.Community.Contentment.DataList</EditorAlias>
     <EditorUIAlias>Umb.Contentment.PropertyEditorUi.DataList</EditorUIAlias>
     <Folder>Data+List/List+Editors</Folder>
@@ -36,14 +36,11 @@
   ],
   "listEditor": [
     {
-      "key": "Umbraco.Community.Contentment.DataEditors.ButtonsDataListEditor, Umbraco.Community.Contentment",
+      "key": "Umbraco.Community.Contentment.DataEditors.TagsDataListEditor, Umbraco.Community.Contentment",
       "value": {
-        "defaultIcon": "icon-document",
-        "labelStyle": "both",
-        "look": "default",
-        "size": "m",
+        "showIcons": true,
         "allowClear": true,
-        "enableMultiple": true
+        "confirmRemoval": true
       }
     }
   ]
