--- a/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListListEditorTemplatedList.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListListEditorTemplatedList.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<DataType Key="d5c03689-ccdd-4581-b086-b48fb422c483" Alias="Data List: List Editor: Buttons" Level="3">
+<DataType Key="88a98c52-f855-4c02-ad16-b60c01fd7371" Alias="Data List: List Editor: Templated List" Level="3">
   <Info>
-    <Name>Data List: List Editor: Buttons</Name>
+    <Name>Data List: List Editor: Templated List</Name>
     <EditorAlias>Umbraco.Community.Contentment.DataList</EditorAlias>
     <EditorUIAlias>Umb.Contentment.PropertyEditorUi.DataList</EditorUIAlias>
     <Folder>Data+List/List+Editors</Folder>
@@ -36,14 +36,12 @@
   ],
   "listEditor": [
     {
-      "key": "Umbraco.Community.Contentment.DataEditors.ButtonsDataListEditor, Umbraco.Community.Contentment",
+      "key": "Umbraco.Community.Contentment.DataEditors.TemplatedListDataListEditor, Umbraco.Community.Contentment",
       "value": {
-        "defaultIcon": "icon-document",
-        "labelStyle": "both",
-        "look": "default",
-        "size": "m",
+        "orientation": "horizontal",
         "allowClear": true,
-        "enableMultiple": true
+        "enableMultiple": true,
+        "template": "\u003Ccontentment-info-box\r\n  type=\u0022transparent\u0022\r\n  icon=\u0022{{ item.icon }}\u0022\r\n  message=\u0022{{ item.name }}\u0022\u003E\r\n\u003C/contentment-info-box\u003E\r\n"
       }
     }
   ]
