--- a/src/Umbraco.Cms.16.x/uSync/v16/Content/data-sources-data.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/Content/data-sources-data.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Content Key="86b65abc-ed84-4fad-af0d-a926f1892aff" Alias="Data Sources: Data" Level="2">
+<Content Key="86b65abc-ed84-4fad-af0d-a926f1892aff" Alias="Data Sources: Data" Level="3">
   <Info>
-    <Parent Key="7a17e1d4-36c6-48b0-971d-d1f09f7ae610">Data List</Parent>
-    <Path>/DataList/DataSourcesData</Path>
+    <Parent Key="418d5c66-2089-47de-ba39-87902aecb0bb">Data Sources</Parent>
+    <Path>/DataList/DataSources/DataSourcesData</Path>
     <Trashed>false</Trashed>
-    <ContentType>contentmentDataListData</ContentType>
+    <ContentType>contentmentDataListDataSourcesData</ContentType>
     <CreateDate>2025-08-22T19:37:08</CreateDate>
     <NodeName Default="Data Sources: Data" />
     <SortOrder>1</SortOrder>
