--- a/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentdatalistdatasourcesumbraco.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentdatalistdatasourcesumbraco.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="7d48e286-eeec-4df6-a1dc-eb2387fb671f" Alias="contentmentDataListUmbraco" Level="2">
+<ContentType Key="7d48e286-eeec-4df6-a1dc-eb2387fb671f" Alias="contentmentDataListDataSourcesUmbraco" Level="2">
   <Info>
-    <Name>Data List: Umbraco</Name>
+    <Name>Data List: Data Sources: Umbraco</Name>
     <Icon>icon-bulleted-list color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description>An editor that combines a custom data source with a custom list editor.</Description>
