--- a/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListListEditorDropdownList.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListListEditorDropdownList.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<DataType Key="d5c03689-ccdd-4581-b086-b48fb422c483" Alias="Data List: List Editor: Buttons" Level="3">
+<DataType Key="fd7268c5-86a1-4152-9b08-0121ce13e706" Alias="Data List: List Editor: Dropdown List" Level="3">
   <Info>
-    <Name>Data List: List Editor: Buttons</Name>
+    <Name>Data List: List Editor: Dropdown List</Name>
     <EditorAlias>Umbraco.Community.Contentment.DataList</EditorAlias>
     <EditorUIAlias>Umb.Contentment.PropertyEditorUi.DataList</EditorUIAlias>
     <Folder>Data+List/List+Editors</Folder>
@@ -36,14 +36,11 @@
   ],
   "listEditor": [
     {
-      "key": "Umbraco.Community.Contentment.DataEditors.ButtonsDataListEditor, Umbraco.Community.Contentment",
+      "key": "Umbraco.Community.Contentment.DataEditors.DropdownListDataListEditor, Umbraco.Community.Contentment",
       "value": {
-        "defaultIcon": "icon-document",
-        "labelStyle": "both",
-        "look": "default",
-        "size": "m",
-        "allowClear": true,
-        "enableMultiple": true
+        "allowEmpty": true,
+        "showDescriptions": true,
+        "showIcons": true
       }
     }
   ]
