--- a/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListListEditorRadioButtonList.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListListEditorRadioButtonList.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<DataType Key="d5c03689-ccdd-4581-b086-b48fb422c483" Alias="Data List: List Editor: Buttons" Level="3">
+<DataType Key="6e995659-bb24-4449-a983-293e494b105b" Alias="Data List: List Editor: Radio Button List" Level="3">
   <Info>
-    <Name>Data List: List Editor: Buttons</Name>
+    <Name>Data List: List Editor: Radio Button List</Name>
     <EditorAlias>Umbraco.Community.Contentment.DataList</EditorAlias>
     <EditorUIAlias>Umb.Contentment.PropertyEditorUi.DataList</EditorUIAlias>
     <Folder>Data+List/List+Editors</Folder>
@@ -36,14 +36,12 @@
   ],
   "listEditor": [
     {
-      "key": "Umbraco.Community.Contentment.DataEditors.ButtonsDataListEditor, Umbraco.Community.Contentment",
+      "key": "Umbraco.Community.Contentment.DataEditors.RadioButtonListDataListEditor, Umbraco.Community.Contentment",
       "value": {
-        "defaultIcon": "icon-document",
-        "labelStyle": "both",
-        "look": "default",
-        "size": "m",
-        "allowClear": true,
-        "enableMultiple": true
+        "orientation": "vertical",
+        "showDescriptions": true,
+        "showIcons": true,
+        "allowClear": true
       }
     }
   ]
