ItemPicker: fixed bug with multiple selection

--- a/src/Umbraco.Cms.16.x/uSync/v16/Content/item-picker.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/Content/item-picker.config
@@ -15,6 +15,8 @@
   <Properties>
     <dataListItemPicker>
       <Value><![CDATA[[
+  "value1",
+  "value2",
   "value3"
 ]]]></Value>
     </dataListItemPicker>
