--- a/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListListEditorItemPicker.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListListEditorItemPicker.config
@@ -43,10 +43,10 @@
         "enableFilter": true,
         "maxItems": 0,
         "allowClear": true,
-        "allowDuplicates": true,
+        "allowDuplicates": false,
         "enableMultiple": true,
         "disableSorting": false,
-        "confirmRemoval": true
+        "confirmRemoval": false
       }
     }
   ]
