Implemented Content Blocks property-editor UI

--- a/src/Umbraco.Cms.16.x/uSync/v16/Content/umbraco-property-editors.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/Content/umbraco-property-editors.config
@@ -316,6 +316,45 @@
           }
         }
       ]
+    },
+    {
+      "contentTypeKey": "1b00afd6-8c01-451f-8b3c-c4f64d972d5a",
+      "key": "1029c25e-9262-4ac6-950d-cf04564b8810",
+      "udi": null,
+      "values": [
+        {
+          "alias": "dataListButtons",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            "value1"
+          ]
+        },
+        {
+          "alias": "dataListCheckboxList",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            "value1"
+          ]
+        },
+        {
+          "alias": "dataListDropdownList",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "value1"
+        },
+        {
+          "alias": "dataListRadioButtonList",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "value1"
+        }
+      ]
     }
   ],
   "settingsData": [],
@@ -384,6 +423,11 @@
       "contentKey": "da59fce8-ff4a-451a-b673-866f606cc218",
       "culture": null,
       "segment": null
+    },
+    {
+      "contentKey": "1029c25e-9262-4ac6-950d-cf04564b8810",
+      "culture": null,
+      "segment": null
     }
   ],
   "Layout": {
@@ -402,6 +446,12 @@
       },
       {
         "contentKey": "20183aa4-1b0e-4f57-84ba-65ba680e2021",
+        "contentUdi": null,
+        "settingsKey": null,
+        "settingsUdi": null
+      },
+      {
+        "contentKey": "1029c25e-9262-4ac6-950d-cf04564b8810",
         "contentUdi": null,
         "settingsKey": null,
         "settingsUdi": null
