--- a/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/ContentBlocksDefaultConfig.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/ContentBlocksDefaultConfig.config
@@ -9,19 +9,10 @@
   <Config><![CDATA[{
   "contentBlockTypes": [
     {
-      "key": "55877ddd-640f-4d73-8b53-f8c671e8415a",
+      "key": "1b00afd6-8c01-451f-8b3c-c4f64d972d5a",
       "value": {
-        "nameTemplate": "HTML Embed: {{description}}",
-        "overlaySize": "medium",
-        "enablePreview": "0"
-      }
-    },
-    {
-      "key": "24522ebf-901d-4aa2-a472-61b6181fd0e5",
-      "value": {
-        "nameTemplate": "Call To Action: {{heading}}",
-        "overlaySize": "small",
-        "enablePreview": "0"
+        "nameTemplate": "Data List: {= dataListButtons }",
+        "overlaySize": "medium"
       }
     }
   ],
