--- a/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/UmbracoBlockList.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/UmbracoBlockList.config
@@ -17,6 +17,9 @@
       "contentElementTypeKey": "299974e3-1ab9-4f0b-88ae-101b263dad15"
     },
     {
+      "contentElementTypeKey": "1b00afd6-8c01-451f-8b3c-c4f64d972d5a"
+    },
+    {
       "contentElementTypeKey": "2719fe65-3825-4bd4-b9f7-cc8eef1c2d65"
     },
     {
