--- a/src/Umbraco.Cms.16.x/uSync/v16/Content/content-blocks.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/Content/content-blocks.config
@@ -14,7 +14,21 @@
   </Info>
   <Properties>
     <contentBlocks>
-      <Value><![CDATA[]]></Value>
+      <Value><![CDATA[[
+  {
+    "elementType": "1b00afd6-8c01-451f-8b3c-c4f64d972d5a",
+    "key": "debe9b8f-3ba1-4db4-b4a2-719ea3b2c056",
+    "value": {
+      "dataListButtons": "[\u0022value1\u0022,\u0022value2\u0022,\u0022value3\u0022]",
+      "dataListCheckboxList": "[\u0022value1\u0022,\u0022value3\u0022]",
+      "dataListDropdownList": "value3",
+      "dataListRadioButtonList": "value3",
+      "dataPickerUmbracoContent": null,
+      "dataPickerNetCountries": "[\u0022DK\u0022,\u0022GB\u0022]",
+      "dataPickerUmbracoMembers": "[\u0022umb://member/862c5352bb8f43deab6878364c3fc5b7\u0022,\u0022umb://member/498195ca346b49a899d03f1200b85e71\u0022]"
+    }
+  }
+]]]></Value>
     </contentBlocks>
   </Properties>
 </Content>
