Pre-beta code-sweep

--- a/src/_uSync/Shared/DataTypes/DataListDataSourceWebUCssClassName.config
+++ b/src/_uSync/Shared/DataTypes/DataListDataSourceWebUCssClassName.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<DataType Key="89179373-0e13-4d02-9273-728e205a9544" Alias="Data List: Web uCssClassName" Level="3">
+<DataType Key="89179373-0e13-4d02-9273-728e205a9544" Alias="Data List: Data Source: Web uCssClassName" Level="3">
   <Info>
-    <Name>Data List: Web uCssClassName</Name>
+    <Name>Data List: Data Source: Web uCssClassName</Name>
     <EditorAlias>Umbraco.Community.Contentment.DataList</EditorAlias>
     <EditorUIAlias>Umb.Contentment.PropertyEditorUi.DataList</EditorUIAlias>
     <Folder>Data+List/Data+Sources</Folder>
