--- a/src/_uSync/Shared/DataTypes/DataListDataSourceWebXMLSitemapPriority.config
+++ b/src/_uSync/Shared/DataTypes/DataListDataSourceWebXMLSitemapPriority.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<DataType Key="9a70de9b-b297-48d8-962b-9382939d1df4" Alias="Data List: Web XML Sitemap: Priority" Level="3">
+<DataType Key="9a70de9b-b297-48d8-962b-9382939d1df4" Alias="Data List: Data Source: Web XML Sitemap: Priority" Level="3">
   <Info>
-    <Name>Data List: Web XML Sitemap: Priority</Name>
+    <Name>Data List: Data Source: Web XML Sitemap: Priority</Name>
     <EditorAlias>Umbraco.Community.Contentment.DataList</EditorAlias>
     <EditorUIAlias>Umb.Contentment.PropertyEditorUi.DataList</EditorUIAlias>
     <Folder>Data+List/Data+Sources</Folder>
