Added "Combobox" list-editor
Changed "Dropdown List" to use `<uui-select>` component.

--- a/src/_uSync/Shared/Content/umbraco-property-editors.config
+++ b/src/_uSync/Shared/Content/umbraco-property-editors.config
@@ -353,6 +353,40 @@
           "editorAlias": null,
           "segment": null,
           "value": "value1"
+        },
+        {
+          "alias": "dataListCombobox",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "value1"
+        },
+        {
+          "alias": "dataPickerUmbracoContent",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            "umb://document/f415b66916d14302a2505ba2182cc6e4"
+          ]
+        },
+        {
+          "alias": "dataPickerNetCountries",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            "GB"
+          ]
+        },
+        {
+          "alias": "dataPickerUmbracoMembers",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            "umb://member/862c5352bb8f43deab6878364c3fc5b7"
+          ]
         }
       ]
     }
