--- a/src/_uSync/Shared/ContentTypes/contentmentdatalistelement.config
+++ b/src/_uSync/Shared/ContentTypes/contentmentdatalistelement.config
@@ -18,6 +18,7 @@
     <Compositions>
       <Composition Key="6d50b1b8-1307-4d39-8a2a-9e2bdcf6c086">contentmentDataListListEditorsButtonsElement</Composition>
       <Composition Key="640e9dc9-dcdb-44ff-80b8-306b74a6e4fd">contentmentDataListListEditorsCheckboxListElement</Composition>
+      <Composition Key="402eb381-8f89-4c48-b22c-ce7d990dab46">contentmentDataListListEditorsComboboxElement</Composition>
       <Composition Key="43c1cfdd-ed86-4def-ac9c-8376d9381a08">contentmentDataListListEditorsDropdownListElement</Composition>
       <Composition Key="5a5c5962-c86b-41d8-9888-d157c7d7e544">contentmentDataListListEditorsRadioButtonListElement</Composition>
       <Composition Key="2719fe65-3825-4bd4-b9f7-cc8eef1c2d65">contentmentDataPickerElement</Composition>
