--- a/src/_uSync/Shared/DataTypes/DataListListEditorCombobox.config
+++ b/src/_uSync/Shared/DataTypes/DataListListEditorCombobox.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<DataType Key="fd7268c5-86a1-4152-9b08-0121ce13e706" Alias="Data List: List Editor: Dropdown List" Level="3">
+<DataType Key="235aa12d-d68d-4088-a0af-e15be59c4ad4" Alias="Data List: List Editor: Combobox" Level="3">
   <Info>
-    <Name>Data List: List Editor: Dropdown List</Name>
+    <Name>Data List: List Editor: Combobox</Name>
     <EditorAlias>Umbraco.Community.Contentment.DataList</EditorAlias>
     <EditorUIAlias>Umb.Contentment.PropertyEditorUi.DataList</EditorUIAlias>
     <Folder>Data+List/List+Editors</Folder>
@@ -36,9 +36,10 @@
   ],
   "listEditor": [
     {
-      "key": "Umbraco.Community.Contentment.DataEditors.DropdownListDataListEditor, Umbraco.Community.Contentment",
+      "key": "Umbraco.Community.Contentment.DataEditors.ComboboxDataListEditor, Umbraco.Community.Contentment",
       "value": {
-        "allowEmpty": false
+        "showDescriptions": true,
+        "showIcons": true
       }
     }
   ]
