DropdownList: pre-populate first value (if `allowEmpty===false`)
Fixes #494

--- a/src/_uSync/Shared/DataTypes/DataListListEditorDropdownList.config
+++ b/src/_uSync/Shared/DataTypes/DataListListEditorDropdownList.config
@@ -38,7 +38,7 @@
     {
       "key": "Umbraco.Community.Contentment.DataEditors.DropdownListDataListEditor, Umbraco.Community.Contentment",
       "value": {
-        "allowEmpty": false
+        "allowEmpty": true
       }
     }
   ]
