uSync: added template to Umbraco props doctype

--- a/src/_uSync/Shared/Content/umbraco-property-editors.config
+++ b/src/_uSync/Shared/Content/umbraco-property-editors.config
@@ -10,7 +10,7 @@
     <SortOrder>15</SortOrder>
     <Published Default="true" />
     <Schedule />
-    <Template />
+    <Template Key="07b5bd24-73d9-40e0-855a-1c1e6b794696">webPage</Template>
   </Info>
   <Properties>
     <blockList>
