--- a/src/_uSync/Shared/ContentTypes/umbracopage.config
+++ b/src/_uSync/Shared/ContentTypes/umbracopage.config
@@ -15,8 +15,10 @@
       <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
     </HistoryCleanup>
     <Compositions />
-    <DefaultTemplate></DefaultTemplate>
-    <AllowedTemplates />
+    <DefaultTemplate>webPage</DefaultTemplate>
+    <AllowedTemplates>
+      <Template Key="07b5bd24-73d9-40e0-855a-1c1e6b794696">webPage</Template>
+    </AllowedTemplates>
   </Info>
   <Structure>
     <ContentType Key="9a5d0746-e029-4374-a850-41108efbaaea" SortOrder="0">umbracoPage</ContentType>
