Sync'd up missing uSync XML files

--- a/src/Umbraco.Cms.13.x/uSync/v9/Content/test-misc.config
+++ b/src/Umbraco.Cms.13.x/uSync/v9/Content/test-misc.config
@@ -29,6 +29,13 @@
   }
 ]]]></Value>
     </dataListItems>
+    <dataPickerUCssClassName>
+      <Value><![CDATA[[
+  "github-square",
+  "twitter-square",
+  "linkedin-square"
+]]]></Value>
+    </dataPickerUCssClassName>
     <dataPickerUmbracoContent>
       <Value><![CDATA[[
   "umb://document/b31b9022676544e795251f9aac85cc5f",
@@ -36,6 +43,9 @@
   "umb://document/f584df3eeffe42698cf41366a03f4fff"
 ]]]></Value>
     </dataPickerUmbracoContent>
+    <dataPickerUserDefined>
+      <Value><![CDATA[]]></Value>
+    </dataPickerUserDefined>
     <iconPicker>
       <Value><![CDATA[icon-science color-grey]]></Value>
     </iconPicker>
