--- a/src/Umbraco.Cms.13.x/uSync/v9/ContentTypes/testmiscpage.config
+++ b/src/Umbraco.Cms.13.x/uSync/v9/ContentTypes/testmiscpage.config
@@ -72,6 +72,22 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
+      <Key>d0d1ef18-77f8-41de-8b46-d5ba51ac6851</Key>
+      <Name>Data Picker - User-defined</Name>
+      <Alias>dataPickerUserDefined</Alias>
+      <Definition>4f43886d-c44e-486e-8c06-b7479ed5d3d6</Definition>
+      <Type>Umbraco.Community.Contentment.DataPicker</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>30</SortOrder>
+      <Tab Alias="dataPicker">Data Picker</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>0ec1844a-2609-41af-a23c-e785fdef96e5</Key>
       <Name>Icon Picker</Name>
       <Alias>iconPicker</Alias>
