--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,10 +14,6 @@ jobs:
       contents: read
       packages: write
 
-    strategy:
-      matrix:
-        dotnet: ['9.0.x', '10.0.x']
-
     steps:
 
     - name: Checkout repository
@@ -26,7 +22,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v5
       with:
-        dotnet-version: ${{ matrix.dotnet }}
+        dotnet-version: 10.0.x
 
     - name: Build and pack
       run: dotnet pack src\Umbraco.Community.Contentment\Umbraco.Community.Contentment.csproj -c Release /p:Version=${{github.ref_name}}
