--- a/src/Umbraco.Cms.17.x/Umbraco.Cms.17.x.csproj
+++ b/src/Umbraco.Cms.17.x/Umbraco.Cms.17.x.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net10.0</TargetFramework>
@@ -8,8 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Umbraco.Cms" Version="17.0.0-rc2" />
-        <PackageReference Include="uSync" Version="17.0.0-rc2" />
+        <PackageReference Include="Umbraco.Cms" Version="17.0.0-rc4" />
+        <PackageReference Include="uSync" Version="17.0.0-rc4" />
         <ProjectReference Include="..\Umbraco.Community.Contentment\Umbraco.Community.Contentment.csproj" />
     </ItemGroup>
 
