--- a/src/Umbraco.Cms.17.x/Umbraco.Cms.17.x.csproj
+++ b/src/Umbraco.Cms.17.x/Umbraco.Cms.17.x.csproj
@@ -8,8 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Umbraco.Cms" Version="17.0.0-rc4" />
-        <PackageReference Include="uSync" Version="17.0.0-rc4" />
+        <PackageReference Include="Umbraco.Cms" Version="17.0.0" />
+        <PackageReference Include="uSync" Version="17.0.0" />
         <ProjectReference Include="..\Umbraco.Community.Contentment\Umbraco.Community.Contentment.csproj" />
     </ItemGroup>
 
