--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -47,9 +47,9 @@
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework)' == 'net10.0'">
-        <PackageReference Include="Umbraco.Cms.Api.Management" Version="17.0.0-rc4" />
-        <PackageReference Include="Umbraco.Cms.Core" Version="17.0.0-rc4" />
-        <PackageReference Include="Umbraco.Cms.Web.Website" Version="17.0.0-rc4" />
+        <PackageReference Include="Umbraco.Cms.Api.Management" Version="17.0.0" />
+        <PackageReference Include="Umbraco.Cms.Core" Version="17.0.0" />
+        <PackageReference Include="Umbraco.Cms.Web.Website" Version="17.0.0" />
     </ItemGroup>
 
     <ItemGroup>
