--- a/src/Umbraco.Community.Contentment.Client/package.json
+++ b/src/Umbraco.Community.Contentment.Client/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "umbraco-contentment",
 	"private": true,
-	"version": "6.0.0-beta003",
+	"version": "6.0.0",
 	"type": "module",
 	"scripts": {
 		"dev": "tsc && vite build --watch",
