--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -41,15 +41,15 @@
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
-        <PackageReference Include="Umbraco.Cms.Api.Management" Version="16.0.0" />
-        <PackageReference Include="Umbraco.Cms.Core" Version="16.0.0" />
-        <PackageReference Include="Umbraco.Cms.Web.Website" Version="16.0.0" />
+        <PackageReference Include="Umbraco.Cms.Api.Management" Version="[16.0.0, 17)" />
+        <PackageReference Include="Umbraco.Cms.Core" Version="[16.0.0, 17)" />
+        <PackageReference Include="Umbraco.Cms.Web.Website" Version="[16.0.0, 17)" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework)' == 'net10.0'">
-        <PackageReference Include="Umbraco.Cms.Api.Management" Version="17.0.0" />
-        <PackageReference Include="Umbraco.Cms.Core" Version="17.0.0" />
-        <PackageReference Include="Umbraco.Cms.Web.Website" Version="17.0.0" />
+        <PackageReference Include="Umbraco.Cms.Api.Management" Version="[17.0.0, 19)" />
+        <PackageReference Include="Umbraco.Cms.Core" Version="[17.0.0, 19)" />
+        <PackageReference Include="Umbraco.Cms.Web.Website" Version="[17.0.0, 19)" />
     </ItemGroup>
 
     <ItemGroup>
