:sparkles: Added npm build to GitHub action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,15 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v5
 
+    - name: Setup Node.js
+      uses: actions/setup-node@v6
+      with:
+        node-version-file: src/Umbraco.Community.Contentment/.nvmrc
+        cache: npm
+        cache-dependency-path: src/Umbraco.Community.Contentment/package-lock.json
+    - run: npm ci --no-audit --no-fund --prefer-offline
+    - run: npm run build
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v5
       with:
